Update build process to fix loading errors
Accomodate directories of JS files
Address obfuscation key in executing callbacks
Update to patch 1.0.1

Change-Id: I6780d4190fcc5b24afee7e73d7ac3413cc1820ea

--- a/src/bootstrap.html
+++ b/src/bootstrap.html
@@ -14,6 +14,6 @@ limitations under the License.
 <html>
     <head></head>
     <body>
-        <script src="bootstrap.js"></script>
+        <script src="webpage/bootstrap.js"></script>
     </body>
 </html>
